# PodcastSync

./: .ad-hoc-signing-implemented.md  .create-release-instructions.md  .github-actions-setup.md  .github-release-notes.md  .macos-gatekeeper-solutions.md  .next-steps.md  .windows-build-instructions.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts  website-prompt.md
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_quality_preference.sql  003_add_episode_limit_and_filename_format.sql
src-tauri/src/: main.rs  state.rs  updater.rs
src-tauri/src/commands/: downloads.rs  episodes.rs  mod.rs  settings.rs  subscriptions.rs  updater.rs
src-tauri/src/db/: episodes.rs  mod.rs  models.rs  queue.rs  settings.rs  subscriptions.rs
src-tauri/src/download/: manager.rs  mod.rs
src-tauri/src/rss/: fetcher.rs  mod.rs  parser.rs
src-tauri/src/scheduler/: feed_checker.rs  mod.rs  update_checker.rs
src-tauri/src/utils/: error.rs  file_naming.rs  mod.rs
src/components/: AudioPlayer.tsx  EpisodeDetailsModal.tsx  Footer.tsx  LanguageSelector.tsx  UpdateModal.tsx  UpdateNotification.tsx
src/components/ui/: DropdownMenu.tsx  Toggle.tsx  Tooltip.tsx
src/i18n/: LanguageContext.tsx  br.ts  en.ts  fr.ts
src/lib/: api.ts  utils.ts
src/stores/: useAudioPlayerStore.ts  useEpisodesStore.ts  useSubscriptionsStore.ts
src/types/: download.ts  episode.ts  events.ts  subscription.ts  update.ts
