[package]
name = "podcastsync"
version = "0.2.1"
description = "A modern, cross-platform desktop application for automatically downloading and managing podcast episodes from RSS feeds"
authors = []
license = "MIT"
repository = "https://github.com/Synapsr/PodcastSync"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-confirm", "dialog-ask", "dialog-message", "dialog-open", "protocol-asset", "fs-remove-file", "fs-read-file", "fs-write-file", "dialog-save", "fs-rename-file", "fs-read-dir", "fs-exists", "fs-create-dir", "fs-remove-dir", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# HTTP client
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "json"], default-features = false }

# RSS parsing
rss = "2.0"
atom_syndication = "0.12"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
sanitize-filename = "0.5"
mime_guess = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
